# transcription-summarizer

./: .gitignore  CLAUDE.md  README.md  config.py  daily_note.py  extractor.py  main.py  pyproject.toml  run_voice_journal.sh  voice_journal.py
providers/: __init__.py  anthropic_provider.py  base.py  deepseek_provider.py  groq_provider.py  local.py
src/: main.py
src/voice_journal/: extractor.py  logic.py
tests/: test_daily_note.py  test_extractor.py  test_logic.py  test_providers.py
tests/fixtures/: sample_garbled.txt  sample_output.md
