[project]
name = "transcription-summarizer"
version = "0.1.0"
description = "Process voice memo transcriptions into structured Obsidian daily note entries"
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.84.0",
    "groq>=1.0.0",
    "local-first-common",
    "openai>=2.24.0",
    "requests>=2.32.5",
    "typer>=0.24.1",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
]

[tool.uv.sources]
local-first-common = { git = "https://github.com/jamalhansen/local-first-common.git", rev = "main" }

[tool.pytest.ini_options]
pythonpath = ["src"]
